# reposkein

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  cliff.toml  docker-compose.yml  glama.json
.github/: dependabot.yml
.github/workflows/: ci.yml  embed-server.yml  pages.yml  release.yml
docs/: INSTALL.md
embed-server/: AGENTS.md  Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt
indexer/: AGENTS.md  Cargo.toml  docker-compose.yml
indexer/crates/cli/: Cargo.toml
indexer/crates/cli/src/: main.rs
indexer/crates/cli/tests/: index_cli.rs  init_hooks_cli.rs  merge_cli.rs  reindex_cli.rs  reindex_graft_cli.rs
indexer/crates/core/: AGENTS.md  Cargo.toml
indexer/crates/core/src/: cache.rs  classify.rs  extractor.rs  hash.rs  heritage.rs  id.rs  jsonl.rs  lib.rs  merge.rs  meta.rs  model.rs  resolve.rs  walk.rs
indexer/crates/lang-common/: Cargo.toml
indexer/crates/lang-common/src/: lib.rs
indexer/crates/lang-csharp/: Cargo.toml
indexer/crates/lang-csharp/src/: calls.rs  defs.rs  lib.rs
indexer/crates/lang-go/: Cargo.toml
indexer/crates/lang-go/src/: calls.rs  defs.rs  lib.rs
indexer/crates/lang-java/: Cargo.toml
indexer/crates/lang-java/src/: calls.rs  defs.rs  imports.rs  lib.rs
indexer/crates/lang-python/: Cargo.toml
indexer/crates/lang-python/src/: calls.rs  defs.rs  imports.rs  lib.rs
indexer/crates/lang-rust/: Cargo.toml
indexer/crates/lang-rust/src/: calls.rs  defs.rs  imports.rs  lib.rs
indexer/crates/lang-ts/: Cargo.toml
indexer/crates/lang-ts/src/: calls.rs  defs.rs  imports.rs  lib.rs
indexer/crates/neo4j-io/: Cargo.toml
indexer/crates/neo4j-io/src/: convert.rs  export.rs  import.rs  lib.rs
indexer/crates/neo4j-io/tests/: integration.rs
mcp/: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
mcp/bench/: AGENTS.md  README.md  run.ts
mcp/bench/fixtures/: reposkein.json
mcp/bench/track2/: README.md  pyproject.toml  requirements.txt
mcp/scripts/: bundle-skill.mjs  bundle-viz.mjs  chmod-bin.mjs  postinstall.mjs
mcp/src/: index.ts
mcp/src/cli/: doctor.ts  init.ts  view.ts
mcp/src/embed/: cache.ts  hybrid.ts  provider.ts
mcp/src/guard/: caps.ts  readonly.ts  summaryValidation.ts
mcp/src/indexer/: fetchBinary.ts  runIndexer.ts
mcp/src/profile/: assemble.ts  impact.ts  inline.ts  resolve.ts  summary.ts  types.ts
mcp/src/search/: bm25f.ts
mcp/src/store/: AGENTS.md  GraphStore.ts  JsonlGraphStore.ts  Neo4jGraphStore.ts  UnconfiguredStore.ts  federation.ts  jsonlGraph.ts  repoId.ts  sidecar.ts
mcp/src/temporal/: gitlog.ts  temporal.ts
mcp/src/tools/: getContextProfile.ts  impact.ts  indexerTools.ts  readCypher.ts  semanticFind.ts  temporalContext.ts  writeSemanticSummary.ts
mcp/test/: bm25f.test.ts  caps.test.ts  doctor.test.ts  embedCache.test.ts  embedProvider.test.ts  fakeStore.ts  federatedProfile.int.test.ts  federation.test.ts  fetchBinary.test.ts  fixture.ts  getContextProfile.int.test.ts  getContextProfileSchema.test.ts  gitlog.test.ts  gracefulStartup.test.ts  hybrid.test.ts  impact.test.ts  impactTool.test.ts  indexerTools.int.test.ts  indexerTools.test.ts  init.test.ts  inline.test.ts  jsonlFederation.test.ts  jsonlGraph.test.ts  jsonlGraphStore.test.ts  readCypher.int.test.ts  readCypher.test.ts  readonly.test.ts  repoId.test.ts  runIndexer.test.ts  semanticFind.test.ts  sidecar.test.ts  storeConformance.int.test.ts  storeConformance.ts  summary.test.ts  summaryValidation.test.ts  temporal.test.ts  viewExport.test.ts  viewSource.test.ts  writeSemanticSummary.int.test.ts
scripts/: release.sh
skill/: SKILL.md
skills/: README.md
skills/reposkein-graph-rag/: SKILL.md
skills/reposkein-setup/: SKILL.md
viz/: AGENTS.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
viz/src/: main.tsx
viz/src/data/: AGENTS.md  api.ts  classify.ts  clientModel.ts  cluster.test.ts  cluster.ts  d3-force-3d.d.ts  federation.test.ts  hash.ts  impact.test.ts  impact.ts  language.test.ts  language.ts  largeGraph.test.ts  layout.test.ts  layout.ts  lens.test.ts  lens.ts  model.ts  navigate.test.ts  navigate.ts  neighborhood.test.ts  neighborhood.ts  parse.ts  positionCache.test.ts  positionCache.ts  revealHelpers.test.ts  search.test.ts  search.ts  selectEdges.test.ts  staticMode.ts  temporal.test.ts  temporal.ts  tour.test.ts  tour.ts  tourApply.test.ts  tourApply.ts  types.ts
viz/src/panels/: DetailPanel.tsx  FilterHUD.tsx  LegendPanel.tsx  LensSwitcher.tsx  MinimapPanel.tsx  SearchPanel.tsx  TourController.tsx
viz/src/routes/: Root.tsx
(+46 files in other folders)
