[workspace]
resolver = "2"
members = ["crates/core", "crates/lang-common", "crates/cli", "crates/lang-python", "crates/lang-ts", "crates/lang-rust", "crates/lang-go", "crates/lang-java", "crates/neo4j-io", "crates/lang-csharp"]

[workspace.package]
version = "0.1.6"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/reposkein/reposkein"

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"            # NOTE: do NOT enable "preserve_order"
tempfile = "3"
assert_cmd = "2"
tree-sitter = "0.26"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
neo4rs = "0.8"
tokio = { version = "1", features = ["rt-multi-thread"] }
