[package]
name = "reposkein-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "reposkein-indexer"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
blake3.workspace = true
clap.workspace = true
reposkein-core = { path = "../core" }

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
serde_json.workspace = true
