[package]
name = "reposkein-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "reposkein-indexer"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
blake3.workspace = true
clap.workspace = true
serde_json.workspace = true
reposkein-core = { path = "../core" }
reposkein-lang-python = { path = "../lang-python" }
reposkein-lang-ts = { path = "../lang-ts" }
reposkein-lang-rust = { path = "../lang-rust" }
reposkein-lang-go = { path = "../lang-go" }
reposkein-neo4j-io = { path = "../neo4j-io" }

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
serde_json.workspace = true
