[package]
name = "reposkein-neo4j-io"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reposkein-core = { path = "../core" }
neo4rs.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true

[dev-dependencies]
reposkein-lang-python = { path = "../lang-python" }
tempfile.workspace = true
